--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "google-auth-library": "^10.5.0",
